# universal-seed-system

./: README.md  __init__.py  pyproject.toml  seed.py  test_hybrid.py  words.json  words.json.sha256
crypto/: __init__.py  aes_gcm.py  argon2.py  ed25519.py  hybrid_dsa.py  hybrid_kem.py  ml_dsa.py  ml_kem.py  secure_wipe.py  slh_dsa.py  x25519.py
examples/: universal.py
spec/v1/: RECOVERY.md  SHA256SUMS  SPEC.md  spec-v1.json  spec.json  test-vectors.json
spec/v2/: RECOVERY.md  SHA256SUMS  SPEC.md  spec-v2.json  test-vectors.json
tools/: audit.py  compile.py  fix_collisions.py  test.py  test_ml_kem.py
